--- a/src/main/res/layout/activity_user_info.xml
+++ b/src/main/res/layout/activity_user_info.xml
@@ -55,4 +55,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/btn_logout"
+        android:text="Logout"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
